# projeto_analise_mercado

./: README.md  pyproject.toml  relatorio.html
src/projeto_analise_mercado/: crew.py  main.py
src/projeto_analise_mercado/config/: agents.yaml  tasks.yaml
