[project]
name = "projeto_analise_mercado"
version = "0.1.0"
description = "projeto_analise_mercado using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
projeto_analise_mercado = "projeto_analise_mercado.main:run"
run_crew = "projeto_analise_mercado.main:run"
train = "projeto_analise_mercado.main:train"
replay = "projeto_analise_mercado.main:replay"
test = "projeto_analise_mercado.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
